--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ blog:
 author:
   fullname                  : FACTS.lab
   rss                       : false # generate RSS feed and show it's icon in header
-  mail                      : aaron.white@factslab.io # change to your e-mail address
+  mail                      : facts.lab@rochester.edu # change to your e-mail address
   twitter                   : factsemlab
   github                    : factslab
   #youtube                   : youtube-user-name
