--- a/_data/people.yml
+++ b/_data/people.yml
@@ -34,6 +34,14 @@
       university: University of Rochester
       website: 
       image: zhendong-liu.jpg
+      
+    - name: Hannah An
+      role: PhD Student
+      department: Computer Science
+      university: University of Rochester
+      website: https://hannah0n.github.io/
+      image: hannah-an.jpg     
+      description: Hannah is a third-year PhD student advised by [Len Schubert](https://www.cs.rochester.edu/~schubert/). Her research aims to enable computers to acquire lexical knowledge for better language understanding. Her current project involves collecting annotated data for verb phrase ellipsis and developing models for identifying and resolving the ellipses. She has also worked on investigating [neg-raising inference triggers](http://megaattitude.io/projects/mega-negraising/) from a lexicon-scale dataset.   
 
 - name: Alumni
   people:
@@ -50,13 +58,6 @@
       university: University of Texas, Austin
       website: https://venkatasg.me/
       image: venkata-govindarajan.jpg
-
-    - name: Hannah An
-      role: PhD Student
-      department: Computer Science
-      university: University of Rochester
-      website: https://hannah0n.github.io/
-      image: hannah-an.jpg
 
     - name: Muskaan Mendiratta
       role: Undergraduate Student
