--- a/_data/people.yml
+++ b/_data/people.yml
@@ -36,6 +36,7 @@
       department: Linguistics
       university: University of Rochester
       website: 
+      description: Zhendong is a second-year MS student in Computational Linguistics advised by Aaron White. He is current working on the Mandarin version of [MegaAcceptability](http://megaattitude.io/projects/mega-acceptability/) which is a lexicon scaled study on the distribution of clause embedding verbs. He also does syntax research on Swahili adverbial clauses and lexical semantic research on Mandarin classifiers.
       image: zhendong-liu.jpg
       
     - name: Hannah An
