--- a/_data/people.yml
+++ b/_data/people.yml
@@ -12,7 +12,7 @@
       department: Computer Science
       university: University of Rochester
       website: https://sidsvash26.github.io/
-      description: Sid is a third-year Computer Science PhD Student advised by Aaron White. His research work focusses on extracting event semantics from natural language text. His latest projects involve working on [Temporal Reasoning in Natural Language Inference](https://aclanthology.org/2020.findings-emnlp.363/) and [Temporal Relation Extraction](https://aclanthology.org/P19-1280/). 
+      description: Sid is a third-year Computer Science PhD Student advised by Aaron White. His research work focuses on extracting event semantics from natural language text. His latest projects involve working on [Temporal Reasoning in Natural Language Inference](https://aclanthology.org/2020.findings-emnlp.363/) and [Temporal Relation Extraction](https://aclanthology.org/P19-1280/). 
       image: siddharth-vashishtha.jpg
 
     - name: William Gantt
@@ -23,6 +23,14 @@
       image: william-gantt.jpg
       description: Will is a third-year PhD student in Computer Science advised by Aaron White and [Dan Gildea](https://www.cs.rochester.edu/~gildea/). His research interests lie broadly in natural language understanding and information extraction. In recent projects, he has developed [computational models of event structure](http://decomp.io/projects/event-structure/) and has investigated [patterns in lexically-triggered belief and desire inferences](http://megaattitude.io/projects/mega-intensionality/) across the English lexicon.
 
+    - name: Hannah An
+      role: PhD Student
+      department: Computer Science
+      university: University of Rochester
+      website: https://hannah0n.github.io/
+      image: hannah-an.jpg     
+      description: Hannah is a third-year PhD student advised by [Len Schubert](https://www.cs.rochester.edu/~schubert/). Her research aims to enable computers to acquire lexical knowledge for better language understanding. Her current project involves collecting annotated data for verb phrase ellipsis and developing models for identifying and resolving the ellipses. She has also worked on investigating [neg-raising inference triggers](http://megaattitude.io/projects/mega-negraising/) from a lexicon-scale dataset.
+      
     - name: Benjamin Kane
       role: PhD Student
       department: Computer Science
@@ -31,6 +39,14 @@
       description: Ben is a third-year PhD student in Computer Science co-advised by Aaron White and [Lenhart Schubert](https://www.cs.rochester.edu/~schubert/). His current research involves creating natural language inference models related to belief and desire properties of verbs (including [modeling annotator disagreement](https://arxiv.org/pdf/2010.10501.pdf) in NLI datasets), and he is interested in future applications of these models in plan-based dialogue systems.
       image: benjamin-kane.jpg
 
+    - name: Stephanie N. Richter
+      role: PhD Student
+      website: http://stephrichter.github.io
+      image: stephanie-richter.jpg
+      department: Linguistics
+      description: Stephanie is a first-year PhD student in Linguistics co-advised by Aaron White and Asia Pietraszko. Her current research is focused on statistical models of acceptability.
+      university: University of Rochester
+      
     - name: Zhendong Liu
       role: MS Student
       department: Linguistics
@@ -38,28 +54,14 @@
       website: 
       description: Zhendong is a second-year MS student in Computational Linguistics advised by Aaron White. He is current working on the Mandarin version of [MegaAcceptability](http://megaattitude.io/projects/mega-acceptability/) which is a lexicon scaled study on the distribution of clause embedding verbs. He also does syntax research on Swahili adverbial clauses and lexical semantic research on Mandarin classifiers.
       image: zhendong-liu.jpg
-      
-    - name: Hannah An
-      role: PhD Student
-      department: Computer Science
-      university: University of Rochester
-      website: https://hannah0n.github.io/
-      image: hannah-an.jpg     
-      description: Hannah is a third-year PhD student advised by [Len Schubert](https://www.cs.rochester.edu/~schubert/). Her research aims to enable computers to acquire lexical knowledge for better language understanding. Her current project involves collecting annotated data for verb phrase ellipsis and developing models for identifying and resolving the ellipses. She has also worked on investigating [neg-raising inference triggers](http://megaattitude.io/projects/mega-negraising/) from a lexicon-scale dataset.   
-      
-    - name: Stephanie N. Richter
-      role: PhD Student
-      website: http://stephrichter.github.io
-      image: stephanie-richter.jpg
-      department: Linguistics
-      university: University of Rochester  
-
+            
     - name: Weiwei Gu
       role: MS Student
       department: Computer Science
       university: University of Rochester
       website: 
       image: weiwei-gu.jpg
+      description: Weiwei is a second-year MS student in Computer Science advised by Aaron White. His current research focuses on information extraction and coreference.
 
 - name: Alumni
   people:
@@ -81,12 +83,12 @@
       role: Undergraduate Student
       department: Computer Science
       university: University of Rochester
-      website: 
+      website: https://www.linkedin.com/in/muskaan-mendiratta/
       image: muskaan-mendiratta.jpg
 
     - name: Boyu Zhang
       role: Undergraduate Student
       department: Computer Science
       university: University of Rochester
-      website: 
+      website: https://boyu-zhang-25.github.io/
       image: boyu-zhang.jpg
