--- a/_data/people.yml
+++ b/_data/people.yml
@@ -71,7 +71,7 @@
       university: University of Rochester
       website: https://jackvalinsky.com
       image: jack-valinsky.jpg
-      description: Jack is a second-year MS student in Linguistics advised by Scott Grimm. His current research focuses on how lexical and syntactic features affect interpretability and acceptability of degraded sentences.
+      description: Jack is a second-year MS student in Linguistics advised by Scott Grimm. His current research focuses on how lexical and syntactic features affect interpretability and acceptability of degraded environments.
       
     - name: Pinxin Liu
       role: UG Student
