Homogenizes role for Jack Valinsky

--- a/_data/people.yml
+++ b/_data/people.yml
@@ -50,7 +50,7 @@
       university: University of Rochester
       
     - name: Jack Valinsky
-      role: MS Student
+      role: Graduate Researcher
       department: Linguistics
       university: University of Rochester
       website: https://jackvalinsky.com
